--- a/stories/Clock.stories.mdx
+++ b/stories/Clock.stories.mdx
@@ -19,7 +19,23 @@ import { enUS } from 'date-fns/locale';
           <p>{date ? format(date, 'HH:mm') : 'null'}</p>
           <Clock locale={enUS} date={date} onChange={setDate} />
         </div>
-      )
+      );
+    }}
+  </Story>
+</Canvas>
+
+# Precision
+
+<Canvas>
+  <Story name="Precision">
+    {() => {
+      const [date, setDate] = useState(null);
+      return (
+        <div>
+          <p>{date ? format(date, 'HH:mm') : 'null'}</p>
+          <Clock locale={enUS} date={date} precision={5} onChange={setDate} />
+        </div>
+      );
     }}
   </Story>
 </Canvas>
