[styling] refactor styling

--- a/stories/Calendar.stories.mdx
+++ b/stories/Calendar.stories.mdx
@@ -48,7 +48,7 @@ You can pass any `date-fns` locale on `locale` props.
 
 <Canvas>
   <Story name="Year">
-    <Calendar locale={enUS} type="month" className="story-calendar" />
+    <Calendar locale={enUS} type="year" className="story-calendar" />
   </Story>
 </Canvas>
 
