[stories] refactor stories documentation

--- a/stories/Calendar.stories.mdx
+++ b/stories/Calendar.stories.mdx
@@ -1,10 +1,9 @@
 import { ArgsTable, Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
 import { Calendar } from '../src';
 
-import './calendar.scss';
 import { enUS, fr } from 'date-fns/locale';
 
-<Meta title="Calendar" component={Calendar} argTypes={{
+<Meta title="Components/Calendar" component={Calendar} argTypes={{
   locale: {
     name: 'locale',
     description: 'Date fns locale',
