--- a/stories/Clock.stories.mdx
+++ b/stories/Clock.stories.mdx
@@ -2,11 +2,10 @@ import { Clock } from '../src';
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
 import { useState } from 'react';
-import { format } from 'date-fns';
 
 import { enUS } from 'date-fns/locale';
 
-<Meta title="Clock" component={Clock} />
+<Meta title="Components/Clock" component={Clock} />
 
 # Default
 
