--- a/stories/Clock.stories.mdx
+++ b/stories/Clock.stories.mdx
@@ -1,24 +1,33 @@
-import { Clock } from '../src';
-
-import { Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
 import { useState } from 'react';
+
+import { ArgsTable, Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
+
+import { Clock } from '../src';
 
 import { enUS } from 'date-fns/locale';
 
 <Meta title="Components/Clock" component={Clock} />
 
-# Default
+# Clock
+
+<br />
+
+## Props
+
+<ArgsTable of="." />
+
+## Default
 
 <Canvas>
   <Story name="Default">
     {() => {
       const [date, setDate] = useState(null);
-      return <Clock locale={enUS} date={date} onChange={setDate} />;
+      return <Clock locale={enUS} date={date} className="story-clock" onChange={setDate} />;
     }}
   </Story>
 </Canvas>
 
-# Precision
+## Precision
 
 Setup clock with `5` minutes precision
 
@@ -26,12 +35,12 @@ Setup clock with `5` minutes precision
   <Story name="Precision">
     {() => {
       const [date, setDate] = useState(null);
-      return <Clock locale={enUS} date={date} precision={5} onChange={setDate} />;
+      return <Clock locale={enUS} date={date} className="story-clock" precision={5} onChange={setDate} />;
     }}
   </Story>
 </Canvas>
 
-# Hour
+## Hour
 
 Setup clock with `60` minutes precision for hour clock
 
@@ -39,7 +48,7 @@ Setup clock with `60` minutes precision for hour clock
   <Story name="Hour">
     {() => {
       const [date, setDate] = useState(null);
-      return <Clock locale={enUS} date={date} precision={60} onChange={setDate} />;
+      return <Clock locale={enUS} date={date} className="story-clock" precision={60} onChange={setDate} />;
     }}
   </Story>
 </Canvas>
