[stories] hooks documentation

--- a/stories/components/Calendar.stories.mdx
+++ b/stories/components/Calendar.stories.mdx
@@ -2,7 +2,7 @@ import { useState } from 'react';
 
 import { ArgsTable, Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
 
-import { Calendar } from '../src';
+import { Calendar } from '../../src';
 
 import { enUS, fr } from 'date-fns/locale';
 import { isSameDay } from 'date-fns';
