--- a/stories/components/Clock.stories.mdx
+++ b/stories/components/Clock.stories.mdx
@@ -2,7 +2,7 @@ import { useState } from 'react';
 
 import { ArgsTable, Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
 
-import { Clock } from '../src';
+import { Clock } from '../../src';
 
 import { enUS } from 'date-fns/locale';
 
