--- a/stories/components/DateRangePickerCalendar.stories.mdx
+++ b/stories/components/DateRangePickerCalendar.stories.mdx
@@ -1,6 +1,6 @@
 import { useState } from 'react';
 
-import { DateRangePickerCalendar } from '../src';
+import { DateRangePickerCalendar } from '../../src';
 
 import { ArgsTable, Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
 
