--- a/stories/components/Popper.stories.mdx
+++ b/stories/components/Popper.stories.mdx
@@ -1,6 +1,6 @@
 import { ArgsTable, Meta } from '@storybook/addon-docs/blocks';
 
-import Popper from '../src/components/popper/Popper';
+import Popper from '../../src/components/popper/Popper';
 
 <Meta title="Components/Popper" component={Popper} />
 
