--- a/stories/components/TimePicker.stories.mdx
+++ b/stories/components/TimePicker.stories.mdx
@@ -1,4 +1,4 @@
-import { TimePicker } from '../src';
+import { TimePicker } from '../../src';
 
 import { ArgsTable, Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
 import { useState } from 'react';
