--- a/stories/components/DatePicker.stories.mdx
+++ b/stories/components/DatePicker.stories.mdx
@@ -2,7 +2,7 @@ import { useState } from 'react';
 
 import { ArgsTable, Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
 
-import { DatePicker } from '../src';
+import { DatePicker } from '../../src';
 
 import { enUS, fr } from 'date-fns/locale';
 
