[stories] add theming documentation

--- a/stories/documentation/Installation.stories.mdx
+++ b/stories/documentation/Installation.stories.mdx
@@ -48,6 +48,8 @@ import 'react-next-dates/dist/style.css';
 import 'react-next-dates/dist/style.scss';
 ```
 
+> See [Theming Section](?path=/docs/documentation-theming--page)
+
 ## Locale
 
 All components need a `locale` props for translation and locale base display.
