[documentation] update readme and storybook

--- a/stories/documentation/Installation.stories.mdx
+++ b/stories/documentation/Installation.stories.mdx
@@ -21,7 +21,7 @@ npm install react-next-dates date-fns --save
 ### With Yarn :
 
 ```sh
-yarn add react-next-dates date-fns --save
+yarn add react-next-dates date-fns
 ```
 
 ### Peer Dependencies
