docs: fix internal linking

--- a/stories/documentation/Theming.stories.mdx
+++ b/stories/documentation/Theming.stories.mdx
@@ -6,7 +6,7 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/addon-docs/blocks';
 
 React next dates use sass for styling.
 
-Before theming, don't forget to [import StyleSheet](/?path=/docs/documentation-installation--page#add-styles).
+Before theming, don't forget to [import StyleSheet](/docs/documentation-installation--page#add-styles).
 
 ## Default Theme
 
