--- a/stories/documentation/customization/Format.stories.mdx
+++ b/stories/documentation/customization/Format.stories.mdx
@@ -15,4 +15,4 @@ Some components have optional props `format` for date and time display.
 
 ## Examples
 
-- [DatePicker](/?path=/docs/components-datepicker--format#format)
+- [DatePicker](/docs/components-datepicker--format#format)
