--- a/stories/documentation/customization/Placeholder.stories.mdx
+++ b/stories/documentation/customization/Placeholder.stories.mdx
@@ -8,8 +8,8 @@ Some components have optional props `placeholder` for input.
 
 ## Default placeholder
 
-Default placeholder value is [format](/?path=/docs/documentation-customization-format--page) props or default format.
+Default placeholder value is [format](/docs/documentation-customization-format--page) props or default format.
 
 ## Examples
 
-- [DatePicker](/?path=/docs/components-datepicker--placeholder#placeholder)
+- [DatePicker](/docs/components-datepicker--placeholder#placeholder)
