--- a/stories/documentation/customization/ReadonlyOnTouch.stories.mdx
+++ b/stories/documentation/customization/ReadonlyOnTouch.stories.mdx
@@ -18,4 +18,4 @@ If you don't you this feature, and let your type the date with mobile keyboard, 
 
 ## Examples
 
-- [DatePicker](/?path=/docs/components-datepicker--readonly-on-touch#readonly-on-touch)
+- [DatePicker](/docs/components-datepicker--readonly-on-touch#readonly-on-touch)
