--- a/stories/documentation/customization/Trigger.stories.mdx
+++ b/stories/documentation/customization/Trigger.stories.mdx
@@ -12,6 +12,6 @@ You will have some open function in the children function props.
 
 ## Examples
 
-- [DatePicker](/?path=/docs/components-datepicker--custom-trigger#custom-trigger)
-- [DateRangePicker](/?path=/docs/components-daterangepicker--custom-trigger#custom-trigger)
-- [TimePicker](/?path=/docs/components-timepicker--custom-trigger#custom-trigger)
+- [DatePicker](/docs/components-datepicker--custom-trigger#custom-trigger)
+- [DateRangePicker](/docs/components-daterangepicker--custom-trigger#custom-trigger)
+- [TimePicker](/docs/components-timepicker--custom-trigger#custom-trigger)
